# kinect-xr

./: .clang-format  .gitignore  .worktree-meta.json  CLAUDE.md  CMakeLists.txt  GETTING_STARTED.md  README.md  start.sh  test.sh
docs/: ARCHITECTURE.md  DEPTH_DATA_GUIDE.md  DEVICE_INVENTORY.md  DEVICE_TESTING_REPORT.md  GETTING_STARTED.md  OPEN_QUESTIONS.md  PHASE3_VALIDATION.md  PRD.md  TESTERS_GUIDE.md
docs/planning/: Kinect XR Implementation Plan.md  Kinect XR Project Summary.md  Kinect XR Research.md  Phase 1 Guide - Comprehensive.md  Phase 1 Guide - Overview.md  _1_GUIDE.md  _phase_comprehensive_prompt.md  _phase_overview_prompt.md  get-codebase.sh  metal-integration.md  openxr-sdk-integration.md
include/kinect_xr/: bridge_server.h  device.h  metal_helper.h  runtime.h
manifest/: kinect_xr.json
rules/: CONVENTIONS.md  TESTING.md
scripts/: README.md  build-list-kinects.sh  capture-device-info.sh  diagnose-device.sh  install-runtime.sh  list-kinects  list-kinects.cpp  quick-device-check.sh  quick-motor-test.sh  register-runtime.sh  run-hardware-tests.sh  setup-test-permissions.sh  setup.sh  start.sh  stop.sh  test-all-devices.sh  test-device.sh  uninstall-runtime.sh
specs/: 001-StreamManagement.md  002-OpenXRSDKSpike.md  003-MinimalAPIRuntime.md  004-MetalSpike.md  005-SessionManagement.md  006-SwapchainFrameLoop.md  007-DepthLayerIntegration.md  008-WebSocketBridgeProtocol.md  009-WebSocketBridgeServer.md  010-KinectClientJS.md  011-P5jsExamples.md  012-DepthStabilizationModule.md  013-ExamplesLandingPage.md  014-KinectMotorControlWebAPI.md
specs/archive/: 003-MinimalAPIRuntime.md  007-DepthLayerIntegration.md  008-WebSocketBridgeProtocol.md  009-WebSocketBridgeServer.md  013-ExamplesLandingPage.md  014-KinectMotorControlWebAPI.md
spike/metal/: CMakeLists.txt  README.md  profile_m5.sh  test_m2.sh  test_m3.sh  test_m4.sh
spike/metal/MetalKinectViewer/: Shaders.metal  main.mm
src/: device.cpp  hello.cpp  kinect_xr_runtime.cpp
src/bridge/: bridge_server.cpp  main.cpp
src/runtime/: entry_points.cpp  kinect_xr_runtime.cpp  metal_helper.mm  texture_upload.cpp
tests/: test_main.cpp
tests/integration/: CMakeLists.txt  device_integration_test.cpp  integration_test_main.cpp  kinect_integration_test.cpp  runtime_discovery_test.cpp  session_lifecycle_test.cpp  swapchain_metal_test.mm
tests/spike/: CMakeLists.txt  openxr_sdk_test.cpp
tests/unit/: CMakeLists.txt  depth_layer_test.cpp  device_unit_test.cpp  frame_cache_test.cpp  frame_loop_test.cpp  libfreenect_test.cpp  session_management_test.cpp  swapchain_test.cpp  system_management_test.cpp  texture_upload_test.cpp  thread_safety_test.cpp  unit_test_main.cpp
tools/test-client/: package.json  test-client.js
web/: README.md  index.html  serve.js  test.html
web/examples/dashboard/: index.html
web/examples/p5js/: depth-mask.html  index.html
web/examples/rgb-depth/: index.html
web/examples/threejs/: index.html
web/lib/: kinect-client.js
